force-app/main/default/objects/HRCSVC_Service_Package_Coverage__c/HRCSVC_Service_Package_Coverage__c.object-meta.xml
<CustomObject>
    <label>Service Package Coverage</label>
    <nameField>
        <label>Service Package Coverage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Package Coverages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>