force-app/main/default/objects/HRCSVC_Service_Package_Coverage__c/fields/HRCSVC_Coverage_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Coverage_Type__c</fullName>
    <label>Coverage Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>