force-app/main/default/objects/HRCSVC_Service_Package_Coverage__c/fields/HRCSVC_GL_Class_Description__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_GL_Class_Description__c</fullName>
    <label>G/L Class Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>