force-app/main/default/objects/HRCSVC_Service_Package_Coverage__c/fields/HRCSVC_Response_Time__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Response_Time__c</fullName>
    <label>Response Time</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>