force-app/main/default/objects/HRCSVC_Service_Package_Coverage__c/fields/HRCSVC_Service_Package__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Service_Package__c</fullName>
    <label>Service Package</label>
    <referenceTo>HRCSVC_Service_Package__c</referenceTo>
    <relationshipLabel>Service Package Coverages</relationshipLabel>
    <relationshipName>Service_Package_Coverages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>