force-app/main/default/objects/HRCSVC_Service_Package_Coverage__c/fields/HRCSVC_Service_Package_Coverage_ID__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Service_Package_Coverage_ID__c</fullName>
    <externalId>true</externalId>
    <label>Service Package Coverage ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>