force-app/main/default/objects/HRCSVC_Service_Package_Coverage__c/fields/HRCSVC_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>HRCSVC_Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HRCFSL_Activity_Type</valueSetName>
    </valueSet>
</CustomField>